<resources>
    <string name="app_name">FlareX</string>
    <string name="dashboard">Dashboard</string>
    <string name="firewall">Firewall</string>
    <string name="settings">Settings</string>
    <string name="email">Email</string>
    <string name="apikey">API Key</string>
    <string name="test_and_connect"><![CDATA[Test & Connect]]></string>
    <string name="login_text">Login with your email and your master API Key\nYour credential are only store on your phone</string>
    <string name="flarex">FlareX</string>
    <string name="no_zone_selected">No Zone Selected</string>
    <string name="swap_zone">Swap Zone</string>
    <string name="select_zone">Select Zone</string>
    <string name="select">Select</string>
    <string name="select_zone_first">Select a zone first</string>
    <string name="under_attack_mode">Under Attack Mode</string>
    <string name="under_attack_description">Show visitors a JavaScript challenge when visiting your site.</string>
    <string name="development_mode">Development Mode</string>
    <string name="development_mode_description">Temporarily bypass our cache. See changes to your origin server in realtime.</string>
    <string name="cant_be_empty">Can\'t be empty</string>
    <string name="invalid_credential">Invalid Credential</string>
    <string name="api_token">API Token</string>
    <string name="api_token_for_analytic">API Token (for analytic)</string>
    <string name="error_parsing_analytic">Error parsing Analytics</string>
    <string name="bandwidth">Bandwidth</string>
    <string name="visitors">Visitors</string>
    <string name="security">Security</string>
    <string name="tls_version">TLS Version</string>
    <string name="dns">DNS</string>
    <string name="ssl_tls">SSL / TLS</string>
    <string name="caching">Caching</string>
    <string name="not_implemented_yet">Not Implemented Yet</string>
    <string name="certificates">Certificates</string>
    <string name="app_settings">App Settings</string>
    <string name="network">Network</string>
    <string name="scrape_shield">Scrape Shield</string>
    <string name="question">\?</string>
    <string name="always_use_https">Always Use HTTPS</string>
    <string name="always_use_https_description">Redirect all requests with scheme “http” to “https”. This applies to all http requests to the zone.</string>
    <string name="authenticate_origin_pulls">Authenticated Origin Pulls</string>
    <string name="authenticate_origin_pulls_description">TLS client certificate presented for authentication on origin pull.</string>
    <string name="https_rewrites">Automatic HTTPS Rewrites</string>
    <string name="https_rewrites_description">Automatic HTTPS Rewrites helps fix mixed content by changing “http” to “https” for all resources or links on your web site that can be served with HTTPS.</string>
    <string name="opportunistic_encryption">Opportunistic Encryption</string>
    <string name="opportunistic_encryption_description">Opportunistic Encryption allows browsers to benefit from the improved performance of HTTP/2 by letting them know that your site is available over an encrypted connection. Browsers will continue to show “http” in the address bar, not “https”.</string>
    <string name="tls_13">TLS 1.3</string>
    <string name="tls_13_description">Enable the latest version of the TLS protocol for improved security and performance.</string>
    <string name="minimum_tls">Minimum TLS Version</string>
    <string name="minimum_tls_description">Only allow HTTPS connections from visitors that support the selected TLS protocol version or newer.</string>
    <string name="cannot_change_setting">This setting can not be change for the moment.</string>
    <string name="ssl_tls_recommender">SSL/TLS Recommender</string>
    <string name="ssl_tls_recommender_description">To check if your website can use a more secure SSL/TLS mode, enable the SSL/TLS Recommender. Receive an email with Cloudflare’s recommendation.</string>
    <string name="beta">Beta</string>
    <string name="edge_certificates">Edge Certificates</string>
    <string name="ipv6_compatibility">IPv6 Compatibility</string>
    <string name="ipv6_compatibility_description">Enable IPv6 support and gateway.</string>
    <string name="websockets">WebSockets</string>
    <string name="websockets_description">Allow WebSockets connections to your origin server.</string>
    <string name="onion_routing">Onion Routing</string>
    <string name="onion_routing_description">Onion Routing allows routing traffic from legitimate users on the Tor network through Cloudflare’s onion services rather than exit nodes, thereby improving privacy of the users and enabling more fine-grained protection.</string>
    <string name="ip_geo">IP Geolocation</string>
    <string name="ip_geo_description">Include the country code of the visitor location with all requests to your website. Note: You must retrieve the IP Geolocation information from the CF-IPCountry HTTP header.</string>
    <string name="pseudo_ipv4">Pseudo IPv4</string>
    <string name="pseudo_ipv4_description">Adds an IPv4 header to requests when a client is using IPv6, but the server only supports IPv4.</string>
    <string name="maximum_upload">Maximum Upload Size</string>
    <string name="maximum_upload_description">The amount of data visitors can upload to your website in a single request.</string>
    <string name="always_online">Always Online™</string>
    <string name="always_online_description">Keep your website online for visitors when your origin server is unavailable. Always Online serves limited copies of web pages to users instead of errors when your server is unreachable.</string>
    <string name="cache_level">Caching Level</string>
    <string name="cache_level_description">Determine how much of your website’s static content you want Cloudflare to cache. Increased caching can speed up page load time.</string>
    <string name="browser_cache_ttl">Browser Cache TTL</string>
    <string name="browser_cache_ttl_description">Determine the length of time Cloudflare instructs a visitor’s browser to cache files. During this period, the browser loads the files from its local cache, speeding up page loads.</string>
    <string name="email_obfuscation">Email Address Obfuscation</string>
    <string name="email_obfuscation_description">Display obfuscated email addresses on your website to prevent harvesting by bots and spammers, without visible changes to the address for human visitors.</string>
    <string name="server_side_exclude">Server-side Excludes</string>
    <string name="server_side_exclude_description">Automatically hide specific content from disreputable visitors.</string>
    <string name="hotlink_protection">Hotlink Protection</string>
    <string name="hotlink_protection_description">Protect your images from off-site linking.</string>
    <string name="setting_not_available">Settings not available yet.</string>
    <string name="host">Host</string>
    <string name="path">Path</string>
    <string name="query">Query</string>
    <string name="method">Method</string>
    <string name="protocol">Protocol</string>
    <string name="empty">Empty</string>
    <string name="country_code">Country Code</string>
    <string name="ip">IP</string>
    <string name="agent">Agent</string>
    <string name="action">Action</string>
    <string name="firewall_event_empty">No firewall events ! \nThis or a good signe cause no bad activities detected, or bad cause you didn\'t set any rules.</string>
    <string name="error_parsing_graphql">Error parsing graphql data, please report this issue, or update the app if available</string>
    <string name="date">Date</string>
    <string name="purge_everything">Purge Everything</string>
    <string name="purge_cache">Purge Cache</string>
    <string name="purge_cache_description">Clear cached files to force Cloudflare to fetch a fresh version of those files from your web server. You can purge files selectively or all at once.\nNote: Purging the cache may temporarily degrade performance for your website and increase load on your origin.</string>
    <string name="add_dns_record">Add DNS Record</string>
    <string name="name">Name</string>
    <string name="content">Content</string>
    <string name="add">Add</string>
    <string name="ca_domain_name">CA Domain Name</string>
    <string name="certificate">Certificate</string>
    <string name="cert_type">Cert. Type</string>
    <string name="helper_0_65535">0 – 65535</string>
    <string name="helper_0_255">0 – 255</string>
    <string name="key_tag">Key Tag</string>
    <string name="algorithm">Algorithm</string>
    <string name="logout">Logout</string>
    <string name="performance">Performance</string>
    <string name="speed">Speed</string>
    <string name="brotli">Brotli</string>
    <string name="brotli_description">Speed up page load times for your visitor’s HTTPS traffic by applying Brotli compression.</string>
    <string name="rocket_loader">Rocket Loader</string>
    <string name="rocket_loader_description">Improve the paint time for pages which include JavaScript.</string>
    <string name="off_not_secure">Off (not secure)</string>
    <string name="no_encryption_applied">No encryption applied</string>
    <string name="flexible">Flexible</string>
    <string name="flexible_description">Encrypts traffic between the browser and Cloudflare</string>
    <string name="full">Full</string>
    <string name="full_description">Encrypts end-to-end, using a self signed certificate on the server</string>
    <string name="full_strict">Full (strict)</string>
    <string name="full_strict_description">Encrypts end-to-end, but requires a trusted CA or Cloudflare Origin CA certificate on the server</string>
    <string name="sync_chart">Synchronize Chart</string>
    <string name="sync_chart_description">If enable chart will show the same highlight</string>
    <string name="remember_zone">Remember Zone</string>
    <string name="remember_zone_description">If enable the application will start on the last selected zone</string>
    <string name="remember_account">Remember Account</string>
    <string name="remember_account_description">If enable the application will start with the last account selected</string>
    <string name="daily_stats">Daily Statistics</string>
    <string name="daily_stats_description">Receive daily stats for this zone, handle visitor, bandwidth, and cached bandwidth</string>
    <string name="flarex_dash">FlareX -</string>
    <string name="_24_hours">24 Hours</string>
    <string name="_7_days">7 Days</string>
    <string name="_30_days">30 Days</string>
    <string name="threats">Threats</string>
    <string name="help">Help</string>
    <string name="helper">Helper</string>
    <string name="cd_cloudflare_logo">CloudFlare Logo</string>
    <string name="cd_development_mode">Development Mode</string>
    <string name="cd_error">Error</string>
    <string name="cd_close">Close</string>
    <string name="cd_helper_01">Cloudflare Login</string>
    <string name="cd_helper_02">Cloudflare Home Screen</string>
    <string name="cd_helper_03">Cloudflare Profile Screen</string>
    <string name="cd_helper_04">Cloudflare API Key Screen</string>
    <string name="cd_helper_05">Cloudflare API Key Dialog</string>
    <string name="cd_crash">Crash</string>
    <string name="oh_no">Oh no!</string>
    <string name="application_crash_text">The application has crashed. Please send the report to help us fix it.</string>
    <string name="always_send_the_crash_report">Always send the crash report</string>
    <string name="dont_send">Don\'t send</string>
    <string name="send">Send</string>
    <string name="country">Country</string>
    <string name="master_key">Master Key</string>
    <string name="request">Request</string>
    <string name="cd_telegram">Telegram</string>
    <string name="cd_gitlab">GitLab</string>
    <string name="cd_open_web">Open Web</string>
</resources>