<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/transparent"
    android:paddingHorizontal="24dp">

    <ProgressBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:id="@+id/progress"
        style="@style/Theme.ColdCloud.Progress.Horizontal"/>

    <ImageView
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:src="@drawable/ic_face_explode"
        android:layout_gravity="center"
        android:contentDescription="@string/cd_crash"
        android:layout_margin="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/oh_no"
        android:layout_gravity="center"
        android:layout_marginVertical="20dp"
        style="@style/Theme.ColdCloud.Title"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/application_crash_text"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginVertical="20dp"
        android:id="@+id/status"/>

    <View android:layout_width="0dp" android:layout_height="0dp" android:layout_weight="1"/>

    <com.google.android.material.checkbox.MaterialCheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="12dp"
        android:id="@+id/always_send_crash"
        android:text="@string/always_send_the_crash_report"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="24dp"
        android:visibility="gone"
        android:id="@+id/send_layout">

        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/dont_send_stack_trace"
            style="@style/Theme.ColdCloud.Button.Outlined"
            android:text="@string/dont_send"/>

        <View android:layout_height="0dp" android:layout_width="0dp" android:layout_weight="1"/>

        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/send_stack_trace"
            android:text="@string/send"/>

    </LinearLayout>

</LinearLayout>