<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:background="@drawable/bg_border"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.75"
        android:padding="6dp"
        android:textColor="@color/secondary"
        android:textAlignment="center"
        android:text="@string/country"/>

    <TextView
        android:background="@drawable/bg_border"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:padding="6dp"
        android:textColor="@color/secondary"
        android:textAlignment="center"
        android:text="@string/request"/>

    <TextView
        android:background="@drawable/bg_border"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:padding="6dp"
        android:textColor="@color/secondary"
        android:textAlignment="center"
        android:text="@string/threats"/>

</LinearLayout>