<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_margin="24dp">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:cardBackgroundColor="@android:color/transparent"
        app:cardCornerRadius="20dp">

        <ImageView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_launcher"
            android:adjustViewBounds="true"
            android:contentDescription="@string/cd_cloudflare_logo"/>

    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/coldcloud"
        android:layout_gravity="center"
        android:layout_marginVertical="14dp"
        style="@style/Theme.ColdCloud.Title"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="80dp"
        android:text="@string/login_text"
        android:textAlignment="center"/>

    <com.google.android.material.chip.ChipGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/connection_mode"
        app:selectionRequired="true"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/master_key"
            android:checked="true"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:id="@+id/login_master_key"/>

        <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/api_token"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:id="@+id/login_token"/>

    </com.google.android.material.chip.ChipGroup>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:layout_marginVertical="10dp"
        android:theme="@style/Theme.ColdCloud.TextInput"
        style="@style/Theme.ColdCloud.TextInput">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:scrollHorizontally="true"
            android:id="@+id/email"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/apikey_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/apikey"
        android:layout_marginVertical="10dp"
        app:endIconDrawable="@drawable/ic_clipboard"
        app:endIconMode="custom"
        android:theme="@style/Theme.ColdCloud.TextInput"
        style="@style/Theme.ColdCloud.TextInput">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:singleLine="true"
            android:scrollHorizontally="true"
            android:id="@+id/apikey"/>

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginVertical="10dp">

        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/help"
            app:icon="@drawable/ic_info"
            app:iconTint="?attr/iconColor"
            app:iconPadding="10dp"
            android:id="@+id/help_btn"
            style="@style/Theme.ColdCloud.Button.Outlined"/>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/test_and_connect"
            android:id="@+id/login_btn"/>

    </LinearLayout>

</LinearLayout>