<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="10dp"
    android:orientation="horizontal">

    <ProgressBar
        android:layout_width="12dp"
        android:layout_height="12dp"
        android:indeterminate="true"
        android:id="@+id/dev_mode_loading"/>

    <ImageView
        android:layout_width="12dp"
        android:layout_height="12dp"
        android:contentDescription="@string/cd_error"
        android:visibility="gone"
        android:src="@drawable/ic_error"
        android:id="@+id/dev_mode_error"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_gravity="center"
            android:contentDescription="@string/cd_development_mode"
            android:src="@drawable/ic_dev"
            android:layout_marginEnd="12dp"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/Theme.FlareX.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/development_mode"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/development_mode_description"/>

        </LinearLayout>

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:layout_gravity="center"
            android:id="@+id/dev_mode_switch"/>

    </LinearLayout>

</RelativeLayout>